--- a/login.html
+++ b/login.html
@@ -8,6 +8,9 @@
     <!-- 引入layUl -->
     <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
     <link rel="stylesheet" href="/assets/css/login.css">
+    <!-- 引入js -->
+    <script src="/assets/js/jquery.js"></script>
+    <script src="/assets/js/login.js"></script>
 
 </head>
 
@@ -18,6 +21,7 @@
     </div>
     <div class="login-box">
         <div class="login-title"></div>
+        <!-- 登录 -->
         <div class="login">
             <form class="layui-form" action="">
                 <!-- 用户名 -->
@@ -30,6 +34,7 @@
                     <i class="layui-icon layui-icon-password"></i>
                     <input type="password" name="title" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
                 </div>
+
                 <!-- 登录 -->
                 <div class="layui-form-item">
                     <button class="layui-btn layui-btn-normal layui-btn-fluid" lay-submit lay-filter="formDemo">登录</button>
@@ -37,6 +42,33 @@
                 <form/>
                 <div class="layui-form-item">
                     <a href="javascript:;" class="reg">去注册账号</a>
+                </div>
+        </div>
+        <!-- 注册  -->
+        <div class="reg-box">
+            <form class="layui-form" action="">
+                <!-- 用户名 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="title" required lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input ">
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="title" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="title" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 登录 -->
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-normal layui-btn-fluid" lay-submit lay-filter="formDemo">登录</button>
+                </div>
+                <form/>
+                <div class="layui-form-item">
+                    <a href="javascript:;" class="tologin">去登录</a>
                 </div>
         </div>
     </div>
