--- a/index.html
+++ b/index.html
@@ -1,14 +1,91 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
+    <title>后台主页</title>
+    <!-- 导入layui的css文件 -->
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
+    <!-- 导入字体图标 -->
+    <link rel="stylesheet" href="/assets/fonts/iconfont.css" />
+  </head>
+  <body class="layui-layout-body">
+    <div class="layui-layout layui-layout-admin">
+      <div class="layui-header">
+        <div class="layui-logo">
+          <img src="/assets/images/logo.png" alt="" />
+        </div>
+        <!-- 头部区域（可配合layui已有的水平导航） -->
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+        <ul class="layui-nav layui-layout-right">
+          <li class="layui-nav-item">
+            <a href="javascript:;">
+              <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
+              个人中心
+            </a>
+            <dl class="layui-nav-child">
+              <dd><a href="">基本资料</a></dd>
+              <dd><a href="">安全设置</a></dd>
+              <dd><a href="">重置密码</a></dd>
+            </dl>
+          </li>
+          <li class="layui-nav-item">
+            <a href=""><span class="iconfont icon-tuichu"></span>退出</a>
+          </li>
+        </ul>
+      </div>
 
-<body>
-    <div>kkk</div>
-</body>
+      <div class="layui-side layui-bg-black">
+        <div class="layui-side-scroll">
+          <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
+          <ul class="layui-nav layui-nav-tree" lay-filter="test">
+            <li class="layui-nav-item">
+              <a href="javascript:;">
+                <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
+                个人中心
+              </a>
+            </li>
+            <li class="layui-nav-item">
+              <a href=""><span class="iconfont icon-home"></span>首页</a>
+            </li>
+            <li class="layui-nav-item">
+              <a class="" href="javascript:;"
+                ><span class="iconfont icon-16"></span>文章管理</a
+              >
+              <dl class="layui-nav-child">
+                <dd><a href="javascript:;">文章类别</a></dd>
+                <dd><a href="javascript:;">文章列表</a></dd>
+                <dd><a href="javascript:;">发表文章</a></dd>
+              </dl>
+            </li>
+            <li class="layui-nav-item">
+              <a href="javascript:;"
+                ><span class="iconfont icon-user"></span>个人中心</a
+              >
+              <dl class="layui-nav-child">
+                <dd><a href="javascript:;">基本资料</a></dd>
+                <dd><a href="javascript:;">更换头像</a></dd>
+                <dd><a href="javascript:;">重置密码</a></dd>
+              </dl>
+            </li>
+          </ul>
+        </div>
+      </div>
 
+      <div class="layui-body">
+        <!-- 内容主体区域 -->
+        <div style="padding: 15px">内容主体区域</div>
+      </div>
+
+      <div class="layui-footer">
+        <!-- 底部固定区域 -->
+        © layui.com - 底部固定区域
+      </div>
+    </div>
+    <!-- 导入layui的js文件 -->
+    <script src="/assets/lib/layui/layui.all.js"></script>
+  </body>
 </html>
