--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <!-- 引入layUl -->
     <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
     <link rel="stylesheet" href="/assets/css/login.css" />
+    <link rel="stylesheet" href="/assets/css/index.css" />
   </head>
 
   <body>
@@ -128,7 +129,7 @@
   <script src="/assets/js/jquery.js"></script>
   <!--导入 layui的js文件 -->
   <script src="/assets/lib/layui/layui.all.js"></script>
-  <!-- <script src="/assets/lib/layui/"></script> -->
+  <script src="/assets/js/baseAPI.js"></script>
   <!-- 导入自己的javascript文件 -->
   <script src="/assets/js/login.js"></script>
 </html>
