--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="layui-side-scroll">
             <div  class="userinfo">
                 <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
-                <span class="text-avatar">A</span>
+                <span class="text-avatar">z</span>
                <span id="welcome">欢迎 ****</span>
               </div>
           <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
@@ -84,7 +84,7 @@
               >
               <dl class="layui-nav-child">
                 <dd>
-                  <a href="javascript:;">
+                  <a href="user_info/user_info.html" target="fm">
                     <i class="layui-icon layui-icon-app"></i> 基本资料</a
                   >
                 </dd>
