--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
               个人中心
             </a>
             <dl class="layui-nav-child">
-              <dd><a href="">基本资料</a></dd>
-              <dd><a href="">安全设置</a></dd>
-              <dd><a href="">重置密码</a></dd>
+              <dd><a href="/user_info/user_info.html" target="fm">基本资料</a></dd>
+              <dd><a href="/user_info/user_avatar.html" target="fm">安全设置</a></dd>
+              <dd><a href="/user_info/user_pwd.html" target="fm">重置密码</a></dd>
             </dl>
           </li>
           <li class="layui-nav-item">
@@ -89,12 +89,13 @@
                   >
                 </dd>
                 <dd>
-                  <a href="javascript:;">
+                  <a href="user_info/user_avatar.html" target="fm">
                     <i class="layui-icon layui-icon-app"></i> 更换头像</a
                   >
                 </dd>
                 <dd>
-                  <a href="javascript:;">
+                  
+                    <a href="user_info/user_pwd.html" target="fm">
                     <i class="layui-icon layui-icon-app"></i> 重置密码</a
                   >
                 </dd>
