--- a/user_info/user_info.html
+++ b/user_info/user_info.html
@@ -62,8 +62,10 @@
             </div>
           </div>
           <div class="layui-form-item">
-            <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
-            <button type="reset" class="layui-btn layui-btn-primary" id="btnReset">重置</button>
+            <div class="layui-input-block">
+              <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
+              <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+            </div>
             </div>
           </div>
         </form>
