--- a/user_info/user_pwd.html
+++ b/user_info/user_pwd.html
@@ -18,19 +18,17 @@
     <div class="layui-card-body">
       <!-- from表单区域 -->
       <form class="layui-form" lay-filter="formUserInfo" id="respassword">
-        <!-- 这是隐藏域 -->
-        <input type="hidden" name="id" value="" />
         <div class="layui-form-item">
           <label class="layui-form-label">原密码</label>
           <div class="layui-input-block">
-            <input type="password" name="oldpwd" required lay-verify="required|pwd" placeholder="请输入原密码"
+            <input type="password" name="oldPwd" required lay-verify="required|pwd" placeholder="请输入原密码"
               autocomplete="off" class="layui-input" />
           </div>
         </div>
         <div class="layui-form-item">
           <label class="layui-form-label">新密码</label>
           <div class="layui-input-block">
-            <input type="password" name="newpwd" required lay-verify="required|pwd|samePwd" placeholder="请输入新密码"
+            <input type="password" name="newPwd" required lay-verify="required|pwd|samePwd" placeholder="请输入新密码"
               autocomplete="off" class="layui-input" />
           </div>
         </div>
