大事件完整项目

--- a/article/art_pub.html
+++ b/article/art_pub.html
@@ -17,7 +17,7 @@
     <!-- 卡片区域 -->
     <div class="layui-card">
         <div class="layui-card-header">写文章</div>
-        <div class="layui-card-body">form-pub
+        <div class="layui-card-body">
             <!-- 发布文章表单 -->
             <form class="layui-form" id="form-pub">
                 <div class="layui-form-item">
