--- a/article/art_cate.html
+++ b/article/art_cate.html
@@ -2,104 +2,109 @@
 <html lang="zh-CN">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- 引入layui的css文件 -->
-    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
-    <!-- 引入自己的css文件 -->
-    <link rel="stylesheet" href="/assets/css/article/art_cate.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <!-- 引入layui的css文件 -->
+  <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
+  <!-- 引入自己的css文件 -->
+  <link rel="stylesheet" href="/assets/css/article/art_cate.css">
 </head>
 
 <body>
-    <!-- 卡片区域 -->
-    <div class="layui-card">
-        <div class="layui-card-header">
-            <span>文章类别管理</span>
-            <button type="button" class="layui-btn layui-btn-normal layui-btn-sm" id="btnAddCate">添加类别</button>
-        </div>
-        <div class="layui-card-body">
-            <table class="layui-table">
-                <colgroup>
-                    <col />
-                    <col />
-                    <col width="200">
-                </colgroup>
-                <thead>
-                    <tr>
-                        <th>分类名称</th>
-                        <th>分类别名</th>
-                        <th>操作</th>
-                    </tr>
-                </thead>
-                <tbody>
-
-                </tbody>
-            </table>
-        </div>
+  <!-- 卡片区域 -->
+  <div class="layui-card">
+    <div class="layui-card-header">
+      <span>文章类别管理</span>
+      <button type="button" class="layui-btn layui-btn-normal layui-btn-sm" id="btnAddCate">添加类别</button>
     </div>
-    <!-- 表单数据模板 -->
+    <div class="layui-card-body">
+      <table class="layui-table">
+        <colgroup>
+          <col />
+          <col />
+          <col width="200">
+        </colgroup>
+        <thead>
+          <tr>
+            <th>分类名称</th>
+            <th>分类别名</th>
+            <th>操作</th>
+          </tr>
+        </thead>
+        <tbody>
 
-    <script type="text/html" id="tpl-table">
-        {{each data}}
-        <tr>
-            <th>{{$value.name}}</th>
-            <th>{{$value.alias}}</th>
-            <th>
-                <button type="button" class="layui-btn layui-btn-xs" id='btn-edit' data-id='{{$value.Id}}'>编辑</button>
-                <button type="button" class="layui-btn layui-btn-xs layui-btn-danger btn-delete"data-id='{{$value.Id}}' >删除</button>
-            </th>
-        </tr>
-        {{/each}}
-    </script>
-    <!-- 添加分类弹出层 -->
-    <script type="text/html" id="dialog-add">
-        <form class="layui-form" id='form-add' >
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <!-- 表单数据模板 -->
 
-            <div class="layui-form-item">
-              <label class="layui-form-label">分类名称</label>
-              <div class="layui-input-block">
-                <input type="text" name="name" required  lay-verify="required" placeholder="请输入分类名称" autocomplete="off" class="layui-input">
-              </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">分类别名</label>
-                <div class="layui-input-block">
-                  <input type="text" name="alias" required  lay-verify="required" placeholder="请输入分类别名" autocomplete="off" class="layui-input">
-                </div>
-              </div>
-              <div class="layui-form-item">
-                <div class="layui-input-block">
-                  <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
-                  <button type="reset" class="layui-btn layui-btn-primary">重置</button>
-                </div>
-              </div>
-              </form>
-    </script>
-    <!-- 修改分类弹出层 -->
-    <script type="text/html" id="form-edit">
-    <form class="layui-form"  lay-filter="formreCate">
-        <!-- 隐藏域id 保存id的值 -->
-        <input type="hidden" name="Id">
-        <div class="layui-form-item">
-          <label class="layui-form-label">分类名称</label>
-          <div class="layui-input-block">
-            <input type="text" name="name" required  lay-verify="required" placeholder="请输入分类名称" autocomplete="off" class="layui-input">
-          </div>
+  <script type="text/html" id="tpl-table">
+    {{each data}}
+    <tr>
+      <th>{{$value.name}}</th>
+      <th>{{$value.alias}}</th>
+      <th>
+        <button type="button" class="layui-btn layui-btn-xs" id='btn-edit' data-id='{{$value.Id}}'>编辑</button>
+        <button type="button" class="layui-btn layui-btn-xs layui-btn-danger btn-delete"
+          data-id='{{$value.Id}}'>删除</button>
+      </th>
+    </tr>
+    {{/each}}
+  </script>
+  <!-- 添加分类弹出层 -->
+  <script type="text/html" id="dialog-add">
+    <form class="layui-form" id='form-add'>
+
+      <div class="layui-form-item">
+        <label class="layui-form-label">分类名称</label>
+        <div class="layui-input-block">
+          <input type="text" name="name" required lay-verify="required" placeholder="请输入分类名称" autocomplete="off"
+            class="layui-input">
         </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">分类别名</label>
-            <div class="layui-input-block">
-              <input type="text" name="alias" required  lay-verify="required" placeholder="请输入分类别名" autocomplete="off" class="layui-input">
-            </div>
+      </div>
+      <div class="layui-form-item">
+        <label class="layui-form-label">分类别名</label>
+        <div class="layui-input-block">
+          <input type="text" name="alias" required lay-verify="required" placeholder="请输入分类别名" autocomplete="off"
+            class="layui-input">
         </div>
-          <div class="layui-form-item">
-            <div class="layui-input-block">
-              <button class="layui-btn" lay-submit lay-filter="formDemo">提交修改</button>
-            </div>
-            </div>
+      </div>
+      <div class="layui-form-item">
+        <div class="layui-input-block">
+          <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
+          <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+        </div>
+      </div>
     </form>
-</script>
+  </script>
+  <!-- 修改分类弹出层 -->
+  <script type="text/html" id="form-edit">
+    <form class="layui-form" lay-filter="formreCate" id="aaa-edit">
+      <!-- 隐藏域id 保存id的值 -->
+      <input type="hidden" name="Id">
+      <div class="layui-form-item">
+        <label class="layui-form-label">分类名称</label>
+        <div class="layui-input-block">
+          <input type="text" name="name" required lay-verify="required" placeholder="请输入分类名称" autocomplete="off"
+            class="layui-input">
+        </div>
+      </div>
+      <div class="layui-form-item">
+        <label class="layui-form-label">分类别名</label>
+        <div class="layui-input-block">
+          <input type="text" name="alias" required lay-verify="required" placeholder="请输入分类别名" autocomplete="off"
+            class="layui-input">
+        </div>
+      </div>
+      <div class="layui-form-item">
+        <div class="layui-input-block">
+          <button class="layui-btn" lay-submit lay-filter="formDemo">提交修改</button>
+        </div>
+      </div>
+    </form>
+  </script>
 
 
 
